<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <Button
            android:text="@string/purchase"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/purchase_button" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
    <Button
            android:text="@string/set_user"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/set_user_button" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/purchase_button"
            app:layout_constraintEnd_toEndOf="@+id/purchase_button"
            app:layout_constraintStart_toStartOf="@+id/purchase_button"/>
    <Button
            android:text="@string/update_user_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/update_user_value_button" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/set_user_button"
            app:layout_constraintStart_toStartOf="@+id/purchase_button"
            app:layout_constraintEnd_toEndOf="@+id/purchase_button"/>
    <Button
            android:text="@string/log_product"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/log_product_item_button" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/update_user_value_button"
            app:layout_constraintStart_toStartOf="@+id/purchase_button"
            app:layout_constraintEnd_toEndOf="@+id/purchase_button"/>
    <Button
            android:text="@string/flush"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/flush_button" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/log_product_item_button"
            app:layout_constraintEnd_toEndOf="@+id/purchase_button"
            app:layout_constraintStart_toStartOf="@+id/purchase_button"/>

    <Button
        android:id="@+id/achieve_level_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/achieve_level"
        app:layout_constraintEnd_toEndOf="@+id/purchase_button"
        app:layout_constraintStart_toStartOf="@+id/purchase_button"
        app:layout_constraintTop_toBottomOf="@+id/flush_button" />

    <Button
        android:id="@+id/complete_reg_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/complete_registration"
        app:layout_constraintEnd_toEndOf="@+id/purchase_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/purchase_button"
        app:layout_constraintTop_toBottomOf="@+id/achieve_level_button" />

    <Button
        android:id="@+id/add_to_cart_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/add_to_cart"
        app:layout_constraintEnd_toEndOf="@+id/purchase_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/purchase_button"
        app:layout_constraintTop_toBottomOf="@+id/complete_reg_button" />

    <Button
        android:id="@+id/set_user_id_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/set_user_id"
        app:layout_constraintEnd_toEndOf="@+id/purchase_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/purchase_button"
        app:layout_constraintTop_toBottomOf="@+id/add_to_cart_button" />

</androidx.constraintlayout.widget.ConstraintLayout>